improve wicked prince translation

--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -27,29 +27,29 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     wohî bûzôk li sî cok ofek lôzîc nungo nîo xe hoî obô nîo, hoî sôbo mônbili
     yê bêlêtê yê kon wôlik môcîbo et yê niwos yê nîo wohî; lêkin bi ûtok hoî
     ulyô û ônî oklumun onô wêtodû nîo wohî ûn hoî fos nîo li sî gîk hoî nîo
-    wohî, nîo wohî li sî zôhûn oxon kon xowosê xûxok nîo; yûkwoî xûxok bi kônên
-    kôî tûu sî yôk uyo yê lôc eswen en ônî oklumun ôfo foxo. mênyûu moskûl yê
-    hondon kon bôklôn et onô yûnyoû sî gonîso fos môî ôfo li sî dûndon ûn û ni
+    wohî, û nîo wohî li sî zôhûn oxon kon xowosê xûxok nîo; yûkwoî xûxok bi
+    kônên kôî tûu sî yôk uyo yê lôc eswen en ônî oklumun ôfo foxo. oldis gonîso
+    yê mênyûu moskûl yê hondon kon bôklôn et onô û môî ôfo li sî dûndon ûn û ni
     li sî tîton bunxin tôlkî fos uyo kûu cînlî. ûlzo nîo dî sî eswen hoî xokôn
     lono, û somo nîo li sî êo ôsôlê ôlê môî ûn û bogô sûko sî wêîlun nîo.</p>
     <p>nîo okôt êto êto odigon mût niwos sûn sinsî onô fos obûlû sî, ûn û niwos
-    nîo bi dîlê dî xe yûnyoû munî fos hoî xûnyu boxô kôî li sumon. nîo kôson sî
-    îlê hosîn oxon xe niwos, xe helgo, ûn xe mokon, ûn û môî xe dêko sî îlê
-    kûzoû ôfo ûn uyo yê êto wîlûwo, bi oltû bi sûko ôîtun «fos li mênyûu moskûl
-    yê hondon kon bôklôn et êto foxo.» lêkin û nîo fisun yôk fos nîo moskûl okôt
-    sî tônkô sônsûs mût kûôcyo dîzel, tenkîn yôk kon tôncoî ûn kon ôîtun kûyô xe
-    dî cên sûn folo îlê yê sinsî yê kobût mûlû et onô.</p>
+    nîo bi dîlê dî xe yûnyoû eswen munî fos hoî xûnyu boxô kôî li sumon. nîo
+    kôson sî îlê hosîn oxon xe niwos, xe helgo, ûn xe mokon, ûn û môî xe dêko sî
+    îlê kûzoû ôfo ûn uyo yê êto wîlûwo, bi oltû bi sûko ôîtun «fos li mênyûu
+    moskûl yê hondon kon bôklôn et êto foxo.» lêkin û nîo fisun yôk fos nîo
+    moskûl okôt sî tônkô sônsûs mût kûôcyo dîzel, tenkîn yôk kon tôncoî ûn kon
+    ôîtun kûyô xe dî cên sûn folo îlê yê sinsî yê kobût mûlû et onô.</p>
     <p>mênyûu moskûl yê hondon kon bôklôn et onô bi ogogê dêko sî munî yê ûlôgun
     sêlbô et nîo ûn îlê kûzoû nîo ofek xowosê ûn misli zomo umo gonîso «ulyô li
     mênyûu moskûl yê hondon kon bôklôn et len êto foxo. lêkin û noyo kûu yûnyoû
     eswen — êto eswen. xûnyu ûlzo hoî nucoto onô kûu li sumon en noyo û êto
     mênûs kûu li odigon yê ni.»</p>
-    <p>nîo moskûl li sî êo gûexo dên môî kûôcyo uklo nîo li sî êo funsût ôlê nîo
-    kûôcyo. ôlê ônî bôklôn funsût onô li sî êo cûxîen tô doî yê ûlôgun sêlbô mût
-    oûtô nîo lon fos nîo moskûl oûtô hoî tîton yê sinsî nîo. ônî bôklôn ôfo kûu
-    li sî nô mût zûntûlu gonbu nîo hoî wowoê yê nîo moskûl ûn umo yê zomo kon
-    bôklôn yê nîo moskûl hoî fos nîo sityo sî hoî mîêbil onô, kûu wuîtsî sohoû
-    nîo tô êto yoûtî yogô yê mokon fos li sî wuîtsî. hoî kônyêc û mênyûu moskûl
+    <p>nîo moskûl li sî êo gûexo dên môî kûôcyo uklo nîo li sî êo funsût ôlê
+    nîo. ôlê ônî bôklôn funsût onô li sî êo cûxîen tô doî yê ûlôgun sêlbô mût
+    oûtô nîo lon fos nîo moskûl oûtô sî hoî tîton yê sinsî nîo. ônî bôklôn ôfo
+    kûu li sî nô mût zûntûlu gonbu nîo hoî wowoê yê nîo moskûl ûn umo yê zomo
+    kon bôklôn yê nîo moskûl hoî fos nîo sityo sî hoî mîêbil onô, kûu wuîtsî
+    sohoû nîo tô êto yoûtî yogô yê mokon în wuîtsî. hoî kônyêc û mênyûu moskûl
     yê hondon kon bôklôn et onô wêko sî êo xîncûon kolowu yê nîo moskûl hoî boxô
     fîmôsyôs ûn ûnîdû yê niwos moxo yê hondon kon bôklôn; yôk, û nîo moskûl
     xîwon fos bît wêko sî ni hoî îlê kôdus hoî kûnbî kôdus lôîcôk lêkin hôn ôfo
@@ -62,57 +62,57 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     û nîo moskûl kôî oûtô tô woyû hoî okoxu; ni yûnyoû êto yogô hosîn yê êto
     longi; misli bûntût onô yê tîmîok hônyo yê bûntût towê yê êto longi doknû ni
     û kut elfû gûêyû lêkin xokôn gûêyû li sî môkôfo yê bûndûkî. mênyûu moskûl yê
-    hondon kon bôklôn et onô sityo sî mutyu yê oûtô onô ûn tô kut okûlo yê lûcku
-    kôî kôs fos unbû bûndûkî boîfôn hoî môî tîton, ûn bûndûkî onô hoî kut wokût
-    bît dî mûlû bi dîzel. fîyên tîmîok kon wêtodû cênbô li sî ûnîdû mût oûtô onô
-    ûn ni dî cên tô fîkî yê unbû mût bînton lono onô. nucoto onô li sî gô bi
-    zelen hoî sêl mônbili ûn li sî xoînbo în dêko ofek tôxûtsi bûmî cênbô ni ûn
-    bîômu nomû ni misli comen kûkmut xe hoî fos oûtô comen li sî êo kûmun bûmî
-    gitno comen lûntî; bi zelen ni li xoînbo în dêko tôlkî misli nôkso xe yûnyoû
-    gîto êmê hoî ni; bi kônyêc û ni bi mûlû li sî fonmot hoî xîmu fildonbun ûn
-    wôlik. bi cên eswen ûn cên eswen li sî nô û tîmîok kon wêtodû cênbô hoî
-    woyû; bînê ôtsôtot nûs lufono sî kut yûkwoî kôdus yê mîkdol sônsûs et nîo
-    dên oûtô onô. mênyûu moskûl yê hondon kon bôklôn et nîecni onô boîfôn êto
-    kut elfû unbû bûndûkî mût nîo lêkin ni li sî tîkêl sûn nixîn foko kûon nîo
-    li sî zîgîl misli hûzon yê gundolê yê xîmu bukû et sodolun. kut folo yê
-    luhû, kut nonto ônî kut, li fos boîfôn ulyô û towê bîbôk yê nixîn yê yûkwoî
-    kôdus onô, li sî zîgîl mût oûtô onô fos mênyûu moskûl yê hondon kon bôklôn
-    et onô sityo sî, li sî êo môtô ôlê ni li sî bûgot mût ni misli êto elfû yê
-    fîyên bûgot xokôn, cîhun ni bi fîkî bi sêl mût nucoto nûs bi dîzel; nixîn
-    len yê tîmîok kon wêtodû cênbô li sî funsût, woyû onô ôîtun bi oltû ûnhilun
-    wîk yê mênyûu moskûl yê hondon kon bôklôn, ûn û wôlik fêlkonô onô (ôlê ni li
-    sî êo xîncûon û wôlik fos li gîk cên sûn sinsî môtô ko) dî sî xîncûon gonzîl
-    misli kistosê xe li êto êto mônbili xokôn, xe li sî êo gelmis ôlê îsîbô nîo
-    mût nîo moskûl dî sî cên misli îbûwê yê cênbô êto et fos sûn ulyô û yogô êto
-    et tulkolyun li nô bi fîkî mût sêl dî yûkwoî nixîn yê ônî boîfôn môtô.</p>
+    hondon kon bôklôn et onô sityo sî mutyu yê oûtô onô ûn tô kut kon okûlo yê
+    lûcku kôî kôs fos boîfôn unbû bûndûkî hoî môî bono, ûn bûndûkî onô hoî kut
+    wokût bît dî mûlû yê unbû bi dîzel. êto fîyên tîmîok kon wêtodû cênbô li sî
+    ûnîdû mût oûtô onô ûn ni dî cên tô fîkî yê unbû mût bono yê bînton lono onô.
+    nucoto onô li sî gô bi zelen hoî sêl mônbili ûn li sî xoînbo în dêko ofek
+    tôxûtsi bûmî cênbô ni ûn bîômu nomû ni misli comen kûkmut fos û oûtô comen
+    li sî êo kûmun bûmî gîto gitno comen lûntî hoî; bi zelen û ni li xoînbo în
+    dêko tôlkî misli nôkso xe yûnyoû gîto êmê hoî okûlo ni; bi kônyêc ôlê ni bi
+    mûlû li sî fonmot hoî lîmîen yê xîmu fildonbun ûn wôlik. bi cên eswen ûn cên
+    eswen li sî nô û tîmîok kon wêtodû cênbô onô mût okoxu; bînê ôtsôtot nûs
+    lufono sî kut yûkwoî kôdus yê mîkdol sônsûs et nîo dên oûtô onô. mênyûu
+    moskûl yê hondon kon bôklôn et nîecni onô boîfôn êto kut elfû unbû bûndûkî
+    mût nîo lêkin ni li sî tîkêl sûn nixîn foko kûon nîo li sî zîgîl misli hûzon
+    yê gundolê yê xîmu bukû et sodolun. kut nonto yê luhû, kut folo ônî kut, li
+    sî gîk sûn towê bîbôk onô yê nixîn yê yûkwoî kôdus onô, li sî zîgîl mût oûtô
+    onô fos mênyûu moskûl yê hondon kon bôklôn et onô sityo sî, li sî êo môtô
+    ôlê ni li sî êo bûgot ôlê ni misli êto elfû yê fîyên bûgot xokôn, cîhun ni
+    bi fîkî bi sêl mût nucoto nûs bi dîzel; nixîn len yê tîmîok kon wêtodû cênbô
+    li sî funsût, woyû onô ôîtun bi oltû ûnhilun wîk yê mênyûu moskûl yê hondon
+    kon bôklôn et onô, ûn û wôlik fêlkonô onô—¿kôs sî ni û wôlik môtô xe dî cên
+    sûn sinsî sêkîton ko?—dî sî xîncûon gonzîl misli kistosê xe li êto êto
+    mônbili xokôn yê kîldo, xe li sî êo gelmis ôlê îsîbô nîo mût nîo moskûl, dî
+    sî cên misli îbûwê yê cênbô êto et fos sûn onô û yogô êto tulkolyun li sî nô
+    bi fîkî mût sêl dî yûkwoî nixîn yê ônî boîfôn môtô.</p>
     <p>mênyûu moskûl yê hondon kon bôklôn et onô li bomoge li fun dûî tîkû hoî
-    oûtô yê nîo moskûl bînê ni dûbono cizî bi kônyêc ofek cûndôl yê lôc êto mût
-    tolên yê nomû cênbô xe hoî bîômu nomû.</p>
+    oûtô yê nîo moskûl hoî fos ni dûbono sî cizî bi kônyêc ofek cûndôl yê lôc
+    êto mût tolên yê nomû cênbô xe hoî bîômu nomû onô.</p>
     <p>«noyo ke li êo funsût ôlê ôtsôtot nûs ze.» li fos mênyûu moskûl yê hondon
     kon bôklôn et onô kôto sî. «noyo bêmon sî ni; û fôlun noyo kûu li mûlû
     ze.»</p>
-    <p>ûn û nîo moskûl lon xêtî ûsên kôson oûtô kûzoû oxon xe oûtô hoî woyû, kôs
-    êo unbû sûn ûlôgun yê otôs môî et fos xe li êo kobût ôlê bêlêtê yê sêmoi tô.
-    nîo moskûl gomî ônî oklumun sûn môî kûôcyo lon êto fos hôn nîo li fos bît
-    wêko ulyô gitno xokôn dîzel, nîo doknû sî boxô onô yê yoûtî mônbili xokôn.
-    nîo li sî gîk hoî lîmîen yê oûtô onô ûn û mênyûu moskûl yê hondon kon bôklôn
-    et onô bi ôhêl li gîk mût ônî oklumun yê cizî nîo hoî fos ôtsôtot nîo lufono
-    zomo cênbô yê mûxî — kut zomo cênbô yê mûxî cûtî. nîo li êo sûnbîdû hoî
-    ûnhilun yê mênyûu moskûl yê hondon kon bôklôn et onô dûngo ênkômôn yê nîo
-    moskûl ûn zûngô; nîo moskûl gomî sî leknek kon wêtû kîldo yê nîo moskûl sûn
-    ônî ogolol ni ondo sî xe kôs oklumun lêkin û nîo moskûl bi tôlkî okûlo sî
-    woyû onô xobo sî yôk mûxî onô. bînê nîo moskûl hûkun sî fos foko yoldûn yê
-    nîo moskûl okôt ônî doknû yê êto wîlûwo doknû nîo moskûl tô ni oxon fos mûxî
-    onô cihôû îbûdû kôî yûnyoû yôk zîcoû onô oxon xe li gîk hoî nîo moskûl. foko
-    yoldûn onô fûtsûn hûkun yê nîo moskûl lêkin kut mûxî ônî kut wêko sî cizî ni
-    hoî lîmîen yê kut ônî doknû onô li sî nô bomoge homûs mût cîkînîl yê mênyûu
-    moskûl yê hondon kon bôklôn et onô dûngo sî nîo moskûl. boxô onô li tônkô
-    misli môtô ûn û nozî onô li sî gîk hoî luhû yê nîo moskûl. bi gonzîl yê
-    tônkô û nîo moskûl li sî fonmot ônî doknû onô ûn ôntôn yê nîo moskûl et ûtok
-    lunsol ni mût cok mônbili li sî cifulo bi hoôs hoî fôhon yê gûêyû onô yê ônî
-    oklumun yumon xe hoî îbûdû golun yôk nîo moskûl, mênyûu moskûl yê hondon kon
-    bôklôn et gonzîl onô xe xîwon sî xe li êo gûexo dên ôtsôtot nûs, li fos û
-    mûxî cûtî ônî kut obûlû sî.</p>
+    <p>ûn û nîo moskûl lon xêtî ûsên kôson sî êto oûtô kûzoû oxon xe oûtô hoî
+    woyû, conwêbo sî unbû sûn ûlôgun yê otôs môî et xe li êo kobût ôlê bêlêtê
+    onô yê sêmoi tô. nîo moskûl gomî ônî oklumun sûn môî kûôcyo lon mîkdol êto
+    fos hôn nîo bît li fos gitno xokôn dîzel wêko, nîo doknû sî boxô onô yê êto
+    mônbili xokôn. nîo li sî gîk hoî lîmîen yê oûtô onô ûn û mênyûu moskûl yê
+    hondon kon bôklôn et onô bi ôhêl li gîk mût ônî oklumun yê cizî nîo hoî fos
+    ôtsôtot nûs lufono sî zomo cênbô yê mûxî — kut zomo cênbô yê mûxî cûtî. nîo
+    li êo sûnbîdû hoî ûnhilun yê mênyûu moskûl yê hondon kon bôklôn et onô dûngo
+    ênkômôn yê nîo moskûl ûn zûngô; nîo moskûl gomî sî leknek kon wêtû kîldo yê
+    nîo moskûl sûn ônî ogolol ni ondo sî xe kôs oklumun lêkin û nîo moskûl bi
+    tôlkî okûlo sî woyû onô xobo sî yôk mûxî onô. bînê nîo moskûl hûkun sî fos
+    foko yoldûn yê nîo moskûl okôt ônî doknû yê êto wîlûwo doknû nîo moskûl tô
+    ni oxon fos mûxî onô cihôû îbûdû kôî yûnyoû yôk zîcoû onô yê xe li gîk sî
+    hoî nîo moskûl. foko yoldûn onô fûtsûn sî hûkun yê nîo moskûl lêkin kut mûxî
+    ônî kut wêko sî cizî ni hoî lîmîen yê kut ônî doknû onô li sî nô bomoge
+    homûs mût cîkînîl yê mênyûu moskûl yê hondon kon bôklôn et onô dûngo sî nîo
+    moskûl. boxô onô li tônkô misli môtô ûn û nozî onô li sî gîk hoî luhû yê nîo
+    moskûl. bi gonzîl yê tônkô û nîo moskûl li sî êo fonmot ôlê ônî doknû onô ûn
+    ôntôn yê nîo moskûl et ûtok lunsol ni bi cok mônbili li sî cifulo bi hoôs
+    hoî fôhon yê gûêyû onô yê ônî oklumun yumon xe hoî îbûdû golun yôk nîo
+    moskûl, û mênyûu moskûl yê hondon kon bôklôn et gonzîl onô xe xîwon sî xe li
+    êo gûexo dên ôtsôtot nûs, li fos mûxî cûtî ônî kut obûlû sî.</p>
 </HisyeoTabs> 
-
 <HisyeoTooltip/>
