fix phrase word order paragraph

--- a/docs/reference/sentences.mdx
+++ b/docs/reference/sentences.mdx
@@ -149,15 +149,18 @@ phrase could not have its verb elided because we needed to apply the epistemic v
 
 ### Phrase Word Order
 
-Each constituent has a marker and a phrase (either an adverb or a noun).
+Each constituent has a preposition and a phrase (either an adverb or a noun).
 Within any given phrase there is always one word that is the main contents of
 that phrase. This is known as the
 [nucleus](https://en.wikipedia.org/wiki/Head_(linguistics)) of the phrase. In
-some languages the nucleus is the *first* word and in other languages the nucleus
-is the *last* word in a phrase. The nucleus of an action phrase is a verb, the
-nucleus of a subject or semantic phrase is a noun. Hîsyêô has a nucleus in the
-middle of a phrase (it *is* a nucleus, after all). Determiners go to the *left*
-of the nucleus and modifiers to the *right*.
+Hîsyêô, the nucleus is the **first** word in a phrase. Regardless of whether the
+base type of the word is a verb, noun, or adjective, the word always takes on
+the form that the preposition particle demands. The nucleus of a verb phrase is
+the direct object (a noun), the nucleus of a subject or semantic phrase is a
+noun. The nucleus of a manner/material phrase is an adverb. Hîsyêô technically
+has a nucleus in the middle of a phrase because
+[determiners](./word_types/determiners.mdx) go to the *left* of the nucleus and
+[adjectives](./word_types/modifiers.mdx) to the *right*.
 
 ## Sentence Types
 
