Fix grammar and misspelling

--- a/docs/reference/sentences.mdx
+++ b/docs/reference/sentences.mdx
@@ -94,10 +94,10 @@ Direct objects are **always** introduced by a free-standing
 with another verb phrase (just like [you can't immediately follow any other
 preposition by another preposition](./word_types/nouns#roles)).
 
-This means that a sentence structure that mirrors the ENglish [passive
+This means that a sentence structure that mirrors the English [passive
 voice](https://en.wikipedia.org/wiki/Passive_voice) is not strictly supported.
 However, there is a way to raise the object to the subject position by providing
-the object in the subject preposition phrase and supply the agent and verb in a
+the object in the subject preposition and supplying the agent and verb in a
 subject complement subordinate clause.
 
 <HisyeoTabs>
