fix title for wicket prince page

--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -11,7 +11,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # The Wicked Prince
 
-## kîso Woyû Sôltûstik Onô Ûn Bînton Lono Onô
+## kîso Mênyûu Moskûl Yê Hondon Kon Bôklôn Et Nîecni
 
 [The Wicked Prince](https://andersen.sdu.dk/vaerk/register/info_e.html?vid=50) by [Hans Christian
 Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
