couple tweaks to first steps phonology

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -135,7 +135,7 @@ of the introduction for some other English dialects.
 
 ##### ô - [open-mid back rounded vowel](https://en.wikipedia.org/wiki/Open-mid_back_rounded_vowel) [ɔ]
 - as in r**o**pe or Camb**o**dia
-- can also be other central and back rounded vowels: [ɞ], [ɵ], [o]
+- can also be more close-mid [o]
 - *slightly geminated*
 
 ##### e - [open-mid front unrounded vowel](https://en.wikipedia.org/wiki/Open-mid_front_unrounded_vowel) [ɛ]
