Update intro and first lesson to include details of broader scope of project

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -11,10 +11,26 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Introduction
 
-## What is Hîsyêô?
+Hîsyêô is new kind of project, where instead of just creating a *language*, a
+full-fledged *culture* was created alongside it. To build an auxiliary path for
+connection between people across the world, there needs to be a *complete*
+language system that unites them and that requires details of a society,
+beliefs, practices and worldview. Without this, different learning groups will
+fill in the blanks based upon their native language and culture.
 
-A small language for people around the world to communicate with each other
-about big ideas.  Hîsyêô was designed using these principles:
+The new culture is one that emphasizes egalitarian, humanitarian, and
+environmentalist values. Check out the models of [participatory
+economics](https://participatoryeconomy.org) and
+[parpolity](https://znetwork.org/znetarticle/parpolity-political-vision-for-a-good-society-by-stephen1-shalom)
+for a good background of the organization structure that this community seeks to
+follow. 
+
+## What is the Hîsyêô language?
+
+A small language of less than 900 words; 96% of the words are nouns, verbs and
+adjectives that never mutate when used. There's just a few dozen special grammar
+words that introduce different parts of the sentence. The Hîsyêô language was
+designed using these principles:
 
 ### Neutrality
 Words are sourced from all world languages proportional to the square root of
@@ -26,16 +42,17 @@ meant to symbolize our sacred bond to our collective linguistic heritage.
 Additionally, the grammar is an analytic isolating language like its forebears
 [Kokanu](https://www.kokanu.com/) and [Toki Pona](https://tokipona.org).
 Analytic isolating languages remove the mutation of words by making grammatical
-syntax separate particle words. Alternatively, many languages mutate or attach
-lexemes to root words in order to achieve similar grammatical means.
+syntax separate particle words. Alternatively, many languages mutate (synthetic)
+or attach (agglutinative) lexemes to root words in order to achieve similar
+grammatical means.
 
-It is the belief of the creators of this language that there's no one system
+It is the belief of the creators of this language that there's no *one* system
 that can reflect all ways of thinkings, be sufficiently comprehensible, and be
 easy to teach. So a complete moderately-naturalistic system was developed that
-improves expressiveness at the cost of some amount of neutrality. However, since
-the grammar provides more functionality and conventions than some minimalist
-languages, Hîsyêô is able to reduce ambiguity which the creators of the language
-believe to be a second-order form of neutrality.
+improves expressiveness at the cost of *some* amount of neutrality. However,
+since the grammar provides more functionality and conventions than some
+minimalist languages, Hîsyêô is able to reduce ambiguity which the creators of
+the language believe to be a second-order form of neutrality.
 
 ### Succinctness
 Words are kept to a minimum where possible but information density is strongly
@@ -68,17 +85,20 @@ too challenging or too verbose to express.
 ## Is Hîsyêô An International Auxiliary Language?
 
 Some of these principles, the orthography and grammatical features that you will
-learn may seem contrary to the practices of any self-respecting [International
-Auxiliary Language](http://interlanguages.net). Hîsyêô **does not** strictly
-follow the tradional principles (and isn't seeking to fit in any kind of
-IAL-shaped box). The creators of the language believe that too much effort
-within IAL development is spent on regularization and cherrypicking existing
-lexical and grammatical tactics of natural languages (while applying some first
-language bias regardless of the best intentions). Instead, Hîsyêô pushes closer
-to an [artlang](https://en.wikipedia.org/wiki/Artistic_language) or a
+learn are contrary to the practices of typical [International Auxiliary
+Languages](http://interlanguages.net). Hîsyêô **does not** strictly follow the
+tradional principles (and isn't seeking to fit in any kind of IAL-shaped box).
+The creators of the language believe that too much effort within IAL development
+is spent on regularization and cherrypicking existing lexical and grammatical
+tactics of natural languages (while applying some first language bias regardless
+of the best intentions) without putting significant effort into semantics (i.e.,
+a *sound* system of meaning) and pragmatics (the cultural scripts for
+interaction and dialogue). Instead, Hîsyêô pushes closer to a
 [loglang](https://loglangs.wiki/Portal) by focusing less on the linguistic
 equivalent of [code golf](https://en.wikipedia.org/wiki/Code_golf) and instead
-striving for a more complete "batteries-included" language.
+striving for a more complete "batteries-included" approach to grammar. Or,
+closer to a [artlang](https://en.wikipedia.org/wiki/Artistic_language) by
+including a full culture and social system.
 
 ## Where did Hîsyêô come from?
 
@@ -91,9 +111,15 @@ a consideration. Neither translation of media nor scientific communication are
 goals of the language. This community member spent considerable time becoming
 fluent in Kokanu and enjoyed the grammatical foundation that it offered. He was
 inspired by an at-the-time new kokanido
-([koanu](https://web.archive.org/web/20231127095333/https://www.parallax.net.nz/x/koanu/)) and decided to try to create his
-own kokanido, enhancing it with some ideas taken from other constructed and
-natural languages.
+([koanu](https://web.archive.org/web/20231127095333/https://www.parallax.net.nz/x/koanu/))
+and decided to try to create his own kokanido, enhancing it with some ideas
+taken from other constructed and natural languages.
+
+After reading books on cross-linguistic semantics, pragmatics and the limits of
+interpretation, the creator decided that more cultural details were needed to
+flesh out a truly ideal language. In addition to creating a strong starting
+point for a new worldview, it also reduces the impact of imperialist and
+capitalist cultures that are prevalent in internet communities today.
 
 ## The Basics
 
