--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -236,6 +236,6 @@ of the introduction for some other English dialects.
 - especially when preceded by a lateral approximant, this phoneme can be
   realized as a palatal lateral approximant [ʎ]
 
-Check out the [phonology reference](../reference/phonology) for more details.
+Check out the [phonology reference](../language/phonology) for more details.
 
 <HisyeoTooltip />
