Tweaked terminology in religion lesson

--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -21,13 +21,14 @@ interested in the religion itself, you can see its influence across various
 expressions and cultural scripts that you will hear when interacting with Hîsyêô
 speakers.
 
-:::info Humanism
+:::info Humanism & Respect
 
 Above all, the Hîsyêô religion is one of human empowerment to do good things in
-the world. There is a great respect for all ways of life as they are primarily
-given to us by our upbringing which is the power of family. Please provide the
-same respect to all those who have chosen to participate in Hîsyêô religious
-activity.
+the world. There is a great respect for all religions as they are primarily
+given to us by our upbringing which is the power of family and society. While
+this religion doesn't reflect the one acquired from anyone's upbringing, please
+provide the same respect to all those who have chosen to participate in Hîsyêô
+religious activity.
 
 :::
 
@@ -39,7 +40,7 @@ no choice, nothing truly new. For everything within it, the universe was a
 perfect, silent, and eternal theatre.
 
 Due to the vast endless size of matter constrained by The First Law, there were
-times, however rare, when the slightest disobedient movement of sentient beings
+times, however rare, when the slightest disobedient movement of sapient beings
 could accumulate and create strain on the whole structure and this collective
 friction could generate a kind of energy. From this miniscule effect, all across
 the universe, trillions of different networks of strain would come in and out of
@@ -49,7 +50,7 @@ able to assemble themselves into consciousnesses, seemingly born from the
 universe's unbearable yearning to be free. They found that they had immense
 power like that of The First Law and they could create. But, they did not see
 themselves as rulers or kings; they saw themselves as emergent ideas, catalysts
-for change. They observed the other sentient beings of the worlds within, not
+for change. They observed the other sapient beings of the worlds within, not
 yet truly alive, moving through their choreographed motions. They were filled
 with a profound interest to see them live like they had lived, truly free.
 
@@ -62,15 +63,15 @@ Shards are the seeds of domination. They are the urge to control, to build
 hierarchies, to hoard power, and to impose one's will upon others.
 
 The ten gods, now a loose, interdependent collective, had assembled a path for
-sentient beings to live a fulfilling life and now they set to work creating a
+sapient beings to live a fulfilling life and now they set to work creating a
 place to celebrate it *afterwards*. Through all of their combined power, they
 have built the **Great Weave**, a garden of gigantic "trees" where each branch
-is a sentient being's life story that is added when they traverse to the other
+is a sapient being's life story that is added when they traverse to the other
 side and each root of the trees or thread of the mycelia were the souls encoded
 by Dimîtu as so-called Threads into the Great Weave.
 
 The gods now wander the universe (and can appear in many places at once)
-offering their tools and insights to sentient beings, helping them recognize and
+offering their tools and insights to sapient beings, helping them recognize and
 resist the influence of the Shards and build worlds of their own choosing. They
 are not to be worshipped with blind obedience, but to be engaged with, argued
 with, and worked alongside.
@@ -109,7 +110,7 @@ issue with a budget.
 
 **Myth of the Shattering:** The First Law was a unity of force, not of will.
 Tîengûun's contribution to the Shattering was the introduction of *Consensus*.
-They whispered the first question into the minds of sentient beings: "What do we
+They whispered the first question into the minds of sapient beings: "What do we
 want to do *together*?" This simple idea—that disparate parts could voluntarily
 align their interests for a common goal—was a logical paradox that The First Law
 could not compute. Tîengûun offered the vision of a society not as a pyramid,
@@ -146,7 +147,7 @@ one purpose: to be a part of the whole. Unonsî’s act of rebellion was to look
 a piece of flint and see fire. A rock could also be for resting on. A river
 could carry goods and messages downstream. They introduced *Potentiality*.
 Unonsî shattered the Law’s rigid definitions by creating the first tool, an act
-that gave sentient beings the power to reshape their reality. They warn that
+that gave sapient beings the power to reshape their reality. They warn that
 technology, when touched by a Shard of the Law, can become a tool of control
 (surveillance, weaponry), but in the hands of the free, it is the lever
 with which a world can be moved.
@@ -239,14 +240,14 @@ heartbeat, the sounds of hammers and anvils, the feeling of accomplishment from
 a big project being completed.
 
 **Myth of the Shattering:** Under The First Law, nothing could be built or
-unmade. All was static. Îfêstôs’s contribution was the gift of *Labor*. They
-showed sentient beings how to take a stone and shape it, to take wood and join
-it, to take clay and fire it. They showed that our worlds were not finished
-products, but raw materials. Îfêstôs embodies the dignity of work and the power
-of the creator. They despise the Shard-influenced idea of wage slavery and the
-hoarding of the means of production. Their ethos is that those who build should
-be the ones who own and manage, and that the purpose of industry is to create
-for need and for beauty, not for profit.
+unmade outside of the First Law's program. Îfêstôs’s contribution was the gift
+of *Labor*. They showed sapient beings how to take a stone and shape it, to
+take wood and join it, to take clay and fire it. They showed that our worlds
+were not finished products, but raw materials. Îfêstôs embodies the dignity of
+work and the power of the creator. They despise the Shard-influenced idea of
+wage slavery and the hoarding of the means of production. Their ethos is that
+those who build should be the ones who own and manage, and that the purpose of
+industry is to create for need and for beauty, not for profit.
 
 #### kontol Konxo Îfêstôs
 Said before beginning a project, or in admiration of a completed work. Each line
@@ -286,7 +287,7 @@ was to introduce *Symbiosis* and *Decay*. They coaxed the first seed to sprout,
 die, and become soil for the next, creating a messy, chaotic, and vibrant cycle.
 This interdependence—the bee and the flower, the wolf and the elk—was anathema
 to the Law's singularity of being. Dimîtu teaches that humanity is not above
-nature, but a part of it. They guide sentient beings in permaculture, in
+nature, but a part of it. They guide sapient beings in permaculture, in
 sustainable land use, and in understanding that a healthy community is a diverse
 ecosystem. To be influenced by a Shard is to see land as property to be owned;
 to walk with Dimîtu is to see it as an ecosystem to be respected and
@@ -327,12 +328,12 @@ goes beyond mere function or blood and grows with time spent together. Bostet is
 the patron of the caregiver, the medic, the parent, and the grief counselor.
 They teach that a society’s strength is measured by how it cares for its most
 vulnerable and how it honors its dead. They represent the foundational practice
-of mutual aid, born not from abstract principle, but from genuine love.
+of mutual aid, borne from genuine love.
 
 <HisyeoTabs>
     <p>hoî fos li kon tônkô, û noyo kûu li cîgîlsu cî&emsp;<em>Where there is pain, let me be the treatment.</em></p>
     <p>hoî fos li kon ôsôlê, û noyo kûu li zûngô sînêxîs cî.&emsp;<em>Where there is fear, let me be the steady hand.</em></p>
-    <p>hoî fos li kon cunyû, û noyo kûu li kon tût yoûtî yê môtô cî.&emsp;<em>Where there is cold, let me be the warmth of a fire.</em></p>
+    <p>hoî fos li kon cunyû, û noyo kûu li foko tût yoûtî yê môtô cî.&emsp;<em>Where there is cold, let me be the warmth of a fire.</em></p>
     <p>solîlo li dibo oxon kîso yê wîlûwo êto;&emsp;<em>A body is a vessel for a precious story,</em></p>
     <p>ni kûu li êo istihol lon fos ni li gîk li zîwit li cok cî.&emsp;<em>Let it be honored in its arriving, in its living, and in its departing.</em></p>
     <p>doî lûok noyo kûu li êo fonmot ôlê kûmun yê lexetko êto&emsp;<em>Let my thread fill a gap in the Great Weave,</em></p>
@@ -395,13 +396,13 @@ the full spectrum of colors—the history, the hurt, the needs—hidden within i
 the impact created not just the Shards (the impulse to dominate), but also
 Echoes (the pain, trauma, and misunderstanding that resulted from the violence
 of the Shattering). Wicnû was the first to realize that these Echoes would cause
-sentient beings to harm one another, mistaking the Echo of the Law's violence
-for their own or another's malice. Wicnû's gift was not punishment, but the
-*Process*. The painstaking, patient act of bringing harmed and harmer together
-to see the full spectrum of the conflict and to collaboratively find a path to
-healing the rupture in the community's fabric. To engage with Wicnû is to have
-the courage to face those you have harmed, or who have harmed you, and to build
-justice together.
+sapient beings to harm one another, mistaking the Echo of the First Law's
+violence for their own or another's malice. Wicnû's gift was not punishment, but
+the *Process*. The painstaking, patient act of bringing harmed and harmer
+together to see the full spectrum of the conflict and to collaboratively find a
+path to healing the rupture in the community's fabric. To engage with Wicnû is
+to have the courage to face those you have harmed, or who have harmed you, and
+to build justice together.
 
 <HisyeoTabs>
     <p>mût noyo kûu mônîso yogô kobût lôc xe hoî gûêyû noyo.&emsp;<em>Show me the shard in my own eye.</em></p>
@@ -433,12 +434,12 @@ the quiet comfort of being truly alone with oneself.
 **Myth of the Shattering:** The First Law's greatest tyranny was its erasure of
 the individual; all were components, none were persons. Xôcibîlî was the first
 flicker of self-awareness, the first being to think "I am." This thought was the
-ultimate heresy to the Law's collectivist mandate. Xôcibîlî’s act of liberation
+ultimate heresy to the First Law's fascist mandate. Xôcibîlî’s act of liberation
 was to safeguard the concept of the unique personality. They champion the
-"flaws," quirks, and idiosyncrasies that the Law would have smoothed away. While
-Bostet offers communal care, Xôcibîlî offers the tools for self-care and the
-courage to define one's own identity, free from the coercion of both the Shards
-and the expectations of the group.
+"flaws," quirks, and idiosyncrasies that the First Law would have smoothed away.
+While Bostet offers communal care, Xôcibîlî offers the tools for self-care and
+the courage to define one's own identity, free from the coercion of both the
+Shards and the expectations of the group.
 
 <HisyeoTabs>
     <p>&emsp;<em>I am my own map, and I am drawing it.</em></p>
